// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Config Schema should be able to successfully build with a complex single profile type configuration 1`] = `
Object {
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "$version": 3,
  "description": "config",
  "properties": Object {
    "defaults": Object {
      "description": "default profiles config",
      "properties": Object {
        "zosmf": Object {
          "type": "string",
        },
      },
      "type": "object",
    },
    "profiles": Object {
      "description": "named profiles config",
      "patternProperties": Object {
        "^\\\\S*$": Object {
          "allOf": Array [
            Object {
              "if": Object {
                "properties": Object {
                  "type": Object {
                    "const": null,
                  },
                },
              },
              "then": Object {
                "properties": Object {
                  "properties": Object {
                    "additionalProperties": true,
                    "title": "a generic profile",
                    "type": "object",
                  },
                },
              },
            },
            Object {
              "if": Object {
                "properties": Object {
                  "type": Object {
                    "const": "zosmf",
                  },
                },
              },
              "then": Object {
                "properties": Object {
                  "properties": Object {
                    "description": "A fake zosmf profile",
                    "properties": Object {
                      "host": Object {
                        "default": "fake",
                        "description": "The fake host to connect to",
                        "enum": Array [
                          "fake",
                          "real",
                        ],
                        "type": "string",
                      },
                    },
                    "required": Array [],
                    "title": "zosmf",
                    "type": "object",
                  },
                },
              },
            },
          ],
          "description": "a profile",
          "properties": Object {
            "profiles": Object {
              "$ref": "#/properties/profiles",
              "description": "additional sub-profiles",
              "type": "object",
            },
            "properties": Object {
              "description": "the profile properties",
              "type": "object",
            },
            "secure": Object {
              "description": "secure property names",
              "prefixItems": Object {
                "type": "string",
              },
              "type": "array",
              "uniqueItems": true,
            },
            "type": Object {
              "description": "the profile type",
              "type": "string",
            },
          },
          "type": "object",
        },
      },
      "type": "object",
    },
  },
  "type": "object",
}
`;

exports[`Config Schema should be able to successfully build with a secure single profile type configuration 1`] = `
Object {
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "$version": 3,
  "description": "config",
  "properties": Object {
    "defaults": Object {
      "description": "default profiles config",
      "properties": Object {
        "zosmf": Object {
          "type": "string",
        },
      },
      "type": "object",
    },
    "profiles": Object {
      "description": "named profiles config",
      "patternProperties": Object {
        "^\\\\S*$": Object {
          "allOf": Array [
            Object {
              "if": Object {
                "properties": Object {
                  "type": Object {
                    "const": null,
                  },
                },
              },
              "then": Object {
                "properties": Object {
                  "properties": Object {
                    "additionalProperties": true,
                    "title": "a generic profile",
                    "type": "object",
                  },
                },
              },
            },
            Object {
              "if": Object {
                "properties": Object {
                  "type": Object {
                    "const": "zosmf",
                  },
                },
              },
              "then": Object {
                "properties": Object {
                  "properties": Object {
                    "description": "A fake zosmf profile",
                    "properties": Object {
                      "host": Object {
                        "type": "string",
                      },
                    },
                    "required": Array [],
                    "title": "zosmf",
                    "type": "object",
                  },
                  "secure": Object {
                    "prefixItems": Object {
                      "enum": Array [
                        "host",
                      ],
                    },
                  },
                },
              },
            },
          ],
          "description": "a profile",
          "properties": Object {
            "profiles": Object {
              "$ref": "#/properties/profiles",
              "description": "additional sub-profiles",
              "type": "object",
            },
            "properties": Object {
              "description": "the profile properties",
              "type": "object",
            },
            "secure": Object {
              "description": "secure property names",
              "prefixItems": Object {
                "type": "string",
              },
              "type": "array",
              "uniqueItems": true,
            },
            "type": Object {
              "description": "the profile type",
              "type": "string",
            },
          },
          "type": "object",
        },
      },
      "type": "object",
    },
  },
  "type": "object",
}
`;

exports[`Config Schema should be able to successfully build with a single profile type configuration 1`] = `
Object {
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "$version": 3,
  "description": "config",
  "properties": Object {
    "defaults": Object {
      "description": "default profiles config",
      "properties": Object {
        "zosmf": Object {
          "type": "string",
        },
      },
      "type": "object",
    },
    "profiles": Object {
      "description": "named profiles config",
      "patternProperties": Object {
        "^\\\\S*$": Object {
          "allOf": Array [
            Object {
              "if": Object {
                "properties": Object {
                  "type": Object {
                    "const": null,
                  },
                },
              },
              "then": Object {
                "properties": Object {
                  "properties": Object {
                    "additionalProperties": true,
                    "title": "a generic profile",
                    "type": "object",
                  },
                },
              },
            },
            Object {
              "if": Object {
                "properties": Object {
                  "type": Object {
                    "const": "zosmf",
                  },
                },
              },
              "then": Object {
                "properties": Object {
                  "properties": Object {
                    "description": "A fake zosmf profile",
                    "properties": Object {
                      "host": Object {
                        "type": "string",
                      },
                    },
                    "required": Array [],
                    "title": "zosmf",
                    "type": "object",
                  },
                },
              },
            },
          ],
          "description": "a profile",
          "properties": Object {
            "profiles": Object {
              "$ref": "#/properties/profiles",
              "description": "additional sub-profiles",
              "type": "object",
            },
            "properties": Object {
              "description": "the profile properties",
              "type": "object",
            },
            "secure": Object {
              "description": "secure property names",
              "prefixItems": Object {
                "type": "string",
              },
              "type": "array",
              "uniqueItems": true,
            },
            "type": Object {
              "description": "the profile type",
              "type": "string",
            },
          },
          "type": "object",
        },
      },
      "type": "object",
    },
  },
  "type": "object",
}
`;

exports[`Config Schema should be able to successfully build with no profile type configuration 1`] = `
Object {
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "$version": 3,
  "description": "config",
  "properties": Object {
    "defaults": Object {
      "description": "default profiles config",
      "properties": Object {},
      "type": "object",
    },
    "profiles": Object {
      "description": "named profiles config",
      "patternProperties": Object {
        "^\\\\S*$": Object {
          "allOf": Array [
            Object {
              "if": Object {
                "properties": Object {
                  "type": Object {
                    "const": null,
                  },
                },
              },
              "then": Object {
                "properties": Object {
                  "properties": Object {
                    "additionalProperties": true,
                    "title": "a generic profile",
                    "type": "object",
                  },
                },
              },
            },
          ],
          "description": "a profile",
          "properties": Object {
            "profiles": Object {
              "$ref": "#/properties/profiles",
              "description": "additional sub-profiles",
              "type": "object",
            },
            "properties": Object {
              "description": "the profile properties",
              "type": "object",
            },
            "secure": Object {
              "description": "secure property names",
              "prefixItems": Object {
                "type": "string",
              },
              "type": "array",
              "uniqueItems": true,
            },
            "type": Object {
              "description": "the profile type",
              "type": "string",
            },
          },
          "type": "object",
        },
      },
      "type": "object",
    },
  },
  "type": "object",
}
`;

exports[`Config Schema should be able to successfully build with two profile type configurations 1`] = `
Object {
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "$version": 3,
  "description": "config",
  "properties": Object {
    "defaults": Object {
      "description": "default profiles config",
      "properties": Object {
        "base": Object {
          "type": "string",
        },
        "zosmf": Object {
          "type": "string",
        },
      },
      "type": "object",
    },
    "profiles": Object {
      "description": "named profiles config",
      "patternProperties": Object {
        "^\\\\S*$": Object {
          "allOf": Array [
            Object {
              "if": Object {
                "properties": Object {
                  "type": Object {
                    "const": null,
                  },
                },
              },
              "then": Object {
                "properties": Object {
                  "properties": Object {
                    "additionalProperties": true,
                    "title": "a generic profile",
                    "type": "object",
                  },
                },
              },
            },
            Object {
              "if": Object {
                "properties": Object {
                  "type": Object {
                    "const": "zosmf",
                  },
                },
              },
              "then": Object {
                "properties": Object {
                  "properties": Object {
                    "description": "A fake zosmf profile",
                    "properties": Object {
                      "host": Object {
                        "type": "string",
                      },
                    },
                    "required": Array [],
                    "title": "zosmf",
                    "type": "object",
                  },
                },
              },
            },
            Object {
              "if": Object {
                "properties": Object {
                  "type": Object {
                    "const": "base",
                  },
                },
              },
              "then": Object {
                "properties": Object {
                  "properties": Object {
                    "description": "A fake base profile",
                    "properties": Object {
                      "port": Object {
                        "type": "number",
                      },
                    },
                    "required": Array [],
                    "title": "base",
                    "type": "object",
                  },
                },
              },
            },
          ],
          "description": "a profile",
          "properties": Object {
            "profiles": Object {
              "$ref": "#/properties/profiles",
              "description": "additional sub-profiles",
              "type": "object",
            },
            "properties": Object {
              "description": "the profile properties",
              "type": "object",
            },
            "secure": Object {
              "description": "secure property names",
              "prefixItems": Object {
                "type": "string",
              },
              "type": "array",
              "uniqueItems": true,
            },
            "type": Object {
              "description": "the profile type",
              "type": "string",
            },
          },
          "type": "object",
        },
      },
      "type": "object",
    },
  },
  "type": "object",
}
`;
